--- a/portal-impl/src/content/Language_ar.properties
+++ b/portal-impl/src/content/Language_ar.properties
@@ -49,7 +49,7 @@ category.cms=إدارة المحتوى
 category.collaboration=تعاون
 category.community=مجتمع
 category.content=محتوى
-category.control_panel.apps=تطبيقات
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=الإعدادات
 category.control_panel.sites=المواقع
 category.control_panel.system=النظام
@@ -60,7 +60,10 @@ category.entertainment=تسلية
 category.finance=مالية
 category.gadgets=أداة
 category.global_menu.applications=التطبيقات
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=محتوى
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=غوغل
 category.highlighted=مميز
 category.kb=قاعدة المعرفة
