--- a/portal-impl/src/content/Language_ca.properties
+++ b/portal-impl/src/content/Language_ca.properties
@@ -54,7 +54,7 @@ category.cms=Gestió de continguts
 category.collaboration=Col·laboració
 category.community=Comunitat
 category.content=Contingut
-category.control_panel.apps=Aplicacions
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuració
 category.control_panel.sites=Llocs web
 category.control_panel.system=Sistema
@@ -65,7 +65,10 @@ category.entertainment=Entreteniment
 category.finance=Finances
 category.gadgets=Gadgets
 category.global_menu.applications=Aplicacions
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Contingut
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Realçat
 category.kb=Base de coneixement
