--- a/portal-impl/src/content/Language_da.properties
+++ b/portal-impl/src/content/Language_da.properties
@@ -49,7 +49,7 @@ category.cms=Indholdsstyring
 category.collaboration=Samarbejde
 category.community=Fællesskab
 category.content=Indhold
-category.control_panel.apps=Kontrolpanel: websted
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguration
 category.control_panel.sites=Websteder
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Underholdning
 category.finance=Finans
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Knowledge Base
