--- a/portal-impl/src/content/Language_de.properties
+++ b/portal-impl/src/content/Language_de.properties
@@ -54,7 +54,7 @@ category.cms=Contentmanagement
 category.collaboration=Kollaboration
 category.community=Community
 category.content=Inhalte
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguration
 category.control_panel.sites=Sites
 category.control_panel.system=System
@@ -65,7 +65,10 @@ category.entertainment=Unterhaltung
 category.finance=Finanzen
 category.gadgets=Gadgets
 category.global_menu.applications=Anwendungen
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Inhalt
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Hervorgehoben
 category.kb=Wissensdatenbank
