--- a/portal-impl/src/content/Language_el.properties
+++ b/portal-impl/src/content/Language_el.properties
@@ -49,7 +49,7 @@ category.cms=Διαχείριση περιεχομένου
 category.collaboration=Συνεργασία
 category.community=Κοινότητα
 category.content=Περιεχόμενο
-category.control_panel.apps=Πίνακας ελέγχου: ρυθμίσεις site
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Ρύθμιση
 category.control_panel.sites=Sites
 category.control_panel.system=Σύστημα
@@ -60,7 +60,10 @@ category.entertainment=Ψυχαγωγία
 category.finance=Χρηματοοικονομικά
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Βάση γνώσεων
