--- a/portal-impl/src/content/Language_es.properties
+++ b/portal-impl/src/content/Language_es.properties
@@ -54,7 +54,7 @@ category.cms=Gestión de contenidos
 category.collaboration=Colaboración
 category.community=Comunidad
 category.content=Contenido
-category.control_panel.apps=Aplicaciones
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuración
 category.control_panel.sites=Sitios Web
 category.control_panel.system=Sistema
@@ -65,7 +65,10 @@ category.entertainment=Entretenimiento
 category.finance=Finanzas
 category.gadgets=Gadgets
 category.global_menu.applications=Aplicaciones
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Contenido
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Destacado
 category.kb=Base de conocimiento
