--- a/portal-impl/src/content/Language_et.properties
+++ b/portal-impl/src/content/Language_et.properties
@@ -49,7 +49,7 @@ category.cms=Sisuhaldus
 category.collaboration=Koostöö
 category.community=Kommuun
 category.content=Sisu
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguratsioon
 category.control_panel.sites=Saidid
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Meelelahutus
 category.finance=Finants
 category.gadgets=Vidin
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Teadmiste baas
