--- a/portal-impl/src/content/Language_eu.properties
+++ b/portal-impl/src/content/Language_eu.properties
@@ -49,7 +49,7 @@ category.cms=Eduki kudeaketa
 category.collaboration=Lankidetza
 category.community=Komunitatea
 category.content=Edukia
-category.control_panel.apps=Kontrol Panela: Gunea
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfigurazioa
 category.control_panel.sites=Guneak
 category.control_panel.system=Sistema
@@ -60,7 +60,10 @@ category.entertainment=Denbora-pasa
 category.finance=Finantza
 category.gadgets=Gadget-ak
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Ezagutza basea
