--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -54,7 +54,7 @@ category.cms=Gestion de contenus
 category.collaboration=Collaboration
 category.community=Communauté
 category.content=Contenu
-category.control_panel.apps=Applications
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Paramètres
 category.control_panel.sites=Emplacements
 category.control_panel.system=Système
@@ -65,7 +65,10 @@ category.entertainment=Divertissement
 category.finance=Finances
 category.gadgets=Instruments
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Contenu
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Mis en évidence
 category.kb=Base de connaissance
