--- a/portal-impl/src/content/Language_hi_IN.properties
+++ b/portal-impl/src/content/Language_hi_IN.properties
@@ -49,7 +49,7 @@ category.cms=कॉंटेंट प्रबंधन
 category.collaboration=सहयोग (कोलॅबोरेशन)
 category.community=कम्यूनिटी
 category.content=कॉंटेंट
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=कॉनफिगरेशन
 category.control_panel.sites=साइज़
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=मनोरंजन
 category.finance=अर्थव्यवस्था
 category.gadgets=गेजिट्स
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=गूगल
 category.highlighted=Highlighted
 category.kb=नॉलेज बेस
