--- a/portal-impl/src/content/Language_hr.properties
+++ b/portal-impl/src/content/Language_hr.properties
@@ -49,7 +49,7 @@ category.cms=Upravljanje sadržajem
 category.collaboration=Suradnja
 category.community=Zajednica
 category.content=Sadržaj
-category.control_panel.apps=Aplikacije
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguracija
 category.control_panel.sites=Web sjedišta
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Zabava
 category.finance=Financije
 category.gadgets=Programčići
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Baza znanja
