--- a/portal-impl/src/content/Language_hu.properties
+++ b/portal-impl/src/content/Language_hu.properties
@@ -54,7 +54,7 @@ category.cms=Tartalomkezelés
 category.collaboration=Együttműködés
 category.community=Közösség
 category.content=Tartalom
-category.control_panel.apps=Alkalmazások
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguráció
 category.control_panel.sites=Webhelyek
 category.control_panel.system=Rendszer
@@ -65,7 +65,10 @@ category.entertainment=Szórakozás
 category.finance=Pénzügy
 category.gadgets=Kütyük
 category.global_menu.applications=Alkalmazások
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Tartalom
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Kiemelt
 category.kb=Tudásbázis
