--- a/portal-impl/src/content/Language_in.properties
+++ b/portal-impl/src/content/Language_in.properties
@@ -49,7 +49,7 @@ category.cms=Manajemen Konten
 category.collaboration=Kolaborasi
 category.community=Komunitas
 category.content=Konten
-category.control_panel.apps=Control Panel: Situs
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfigurasi
 category.control_panel.sites=Komunitas
 category.control_panel.system=Sistem
@@ -60,7 +60,10 @@ category.entertainment=Hiburan
 category.finance=Keuangan
 category.gadgets=Alat
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Pengetahuan Dasar
