--- a/portal-impl/src/content/Language_it.properties
+++ b/portal-impl/src/content/Language_it.properties
@@ -52,7 +52,7 @@ category.cms=Gestione Contenuti
 category.collaboration=Collaborazione
 category.community=Sito
 category.content=Contenuto
-category.control_panel.apps=Applicazioni
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configurazione
 category.control_panel.sites=Siti
 category.control_panel.system=Sistema
@@ -63,7 +63,10 @@ category.entertainment=Intrattenimento
 category.finance=Finanza
 category.gadgets=Gadget
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=In evidenza
 category.kb=Knowledge Base
