--- a/portal-impl/src/content/Language_ja.properties
+++ b/portal-impl/src/content/Language_ja.properties
@@ -52,7 +52,7 @@ category.cms=コンテンツ管理
 category.collaboration=コラボレーション
 category.community=コミュニティ
 category.content=コンテンツ
-category.control_panel.apps=アプリ
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=設定
 category.control_panel.sites=サイト
 category.control_panel.system=システム
@@ -63,7 +63,10 @@ category.entertainment=エンターテイメント
 category.finance=ファイナンス
 category.gadgets=ガジェット
 category.global_menu.applications=アプリケーション
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=コンテント
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=ハイライト
 category.kb=ナレッジベース
