--- a/portal-impl/src/content/Language_ko.properties
+++ b/portal-impl/src/content/Language_ko.properties
@@ -49,7 +49,7 @@ category.cms=만족한 관리
 category.collaboration=협력
 category.community=지역 사회
 category.content=내용
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=윤곽
 category.control_panel.sites=위치
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=오락
 category.finance=경리
 category.gadgets=부속품
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=지식 기준
