--- a/portal-impl/src/content/Language_lo.properties
+++ b/portal-impl/src/content/Language_lo.properties
@@ -49,7 +49,7 @@ category.cms=ການບໍລິຫານເນື້ອຫາ
 category.collaboration=ການຮ່ວມມື
 category.community=ສະມາຄົມ
 category.content=ສາລະບານ
-category.control_panel.apps=ຄອນໂທນພາເນວ: ໄຊທ໌
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=ກຳນົດຄ່າ
 category.control_panel.sites=ໜ້າຕ່າງໆ
 category.control_panel.system=ລະບົບ
@@ -60,7 +60,10 @@ category.entertainment=ບັນເທິງ
 category.finance=ການເງິນ
 category.gadgets=ເກດເກັດຕ່າງໆ
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=ເວບກູໂກ
 category.highlighted=Highlighted
 category.kb=ຖານຄວາມຮູ້
