--- a/portal-impl/src/content/Language_nb.properties
+++ b/portal-impl/src/content/Language_nb.properties
@@ -49,7 +49,7 @@ category.cms=Publisering
 category.collaboration=Samarbeid
 category.community=Gruppe
 category.content=Innhold
-category.control_panel.apps=Applikasjoner
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Oppsett
 category.control_panel.sites=Nettsteder
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Underholdning
 category.finance=Økonomi
 category.gadgets=Dingser
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Kunnskapsbase
