--- a/portal-impl/src/content/Language_nl.properties
+++ b/portal-impl/src/content/Language_nl.properties
@@ -55,7 +55,7 @@ category.cms=Contentbeheer
 category.collaboration=Samenwerking
 category.community=Gemeenschap
 category.content=Inhoud
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuratie
 category.control_panel.sites=Sites
 category.control_panel.system=Systeem
@@ -66,7 +66,10 @@ category.entertainment=Entertainment
 category.finance=Financiën
 category.gadgets=Gadgets
 category.global_menu.applications=Applicaties
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Inhoud
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Gemarkeerd
 category.kb=Kennisbank
