--- a/portal-impl/src/content/Language_pl.properties
+++ b/portal-impl/src/content/Language_pl.properties
@@ -49,7 +49,7 @@ category.cms=Zarządzanie treścią
 category.collaboration=Współpraca
 category.community=Społeczność
 category.content=Zawartość
-category.control_panel.apps=Panel sterowania: witryna
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguracja
 category.control_panel.sites=Witryny
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Rozrywka
 category.finance=Finanse
 category.gadgets=Gadżety
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Baza wiedzy
