--- a/portal-impl/src/content/Language_pt_BR.properties
+++ b/portal-impl/src/content/Language_pt_BR.properties
@@ -49,7 +49,7 @@ category.cms=Gerenciamento de Conteúdo
 category.collaboration=Colaboração
 category.community=Comunidade
 category.content=Conteúdo
-category.control_panel.apps=Aplicativos
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuração
 category.control_panel.sites=Sites
 category.control_panel.system=Sistema
@@ -60,7 +60,10 @@ category.entertainment=Entretenimento
 category.finance=Finanças
 category.gadgets=Gadgets
 category.global_menu.applications=Aplicativos
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Conteúdo
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Destaques
 category.kb=Base de Conhecimento
