--- a/portal-impl/src/content/Language_pt_PT.properties
+++ b/portal-impl/src/content/Language_pt_PT.properties
@@ -54,7 +54,7 @@ category.cms=Gestão de conteúdos
 category.collaboration=Colaboração
 category.community=Comunidade
 category.content=Conteúdo
-category.control_panel.apps=Aplicações
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuração
 category.control_panel.sites=Sites
 category.control_panel.system=Sistema
@@ -65,7 +65,10 @@ category.entertainment=Entretenimento
 category.finance=Finanças
 category.gadgets=Dispositivos
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Realçado
 category.kb=Base de Conhecimento
