--- a/portal-impl/src/content/Language_ro.properties
+++ b/portal-impl/src/content/Language_ro.properties
@@ -49,7 +49,7 @@ category.cms=Gestionare conținut
 category.collaboration=Colaborare
 category.community=Comunitate
 category.content=Conținut
-category.control_panel.apps=Aplicații
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configurație
 category.control_panel.sites=Site-uri
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Divertisment
 category.finance=Finanțe
 category.gadgets=Gadget-uri
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Bază de cunoștințe
