--- a/portal-impl/src/content/Language_ru.properties
+++ b/portal-impl/src/content/Language_ru.properties
@@ -49,7 +49,7 @@ category.cms=Система управления контентом
 category.collaboration=Совместная работа
 category.community=Сайты
 category.content=Контент
-category.control_panel.apps=Приложения
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Конфигурация
 category.control_panel.sites=Сайты
 category.control_panel.system=Системный
@@ -60,7 +60,10 @@ category.entertainment=Развлечения
 category.finance=Финансы
 category.gadgets=Гаджеты
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=База знаний
