--- a/portal-impl/src/content/Language_sk.properties
+++ b/portal-impl/src/content/Language_sk.properties
@@ -49,7 +49,7 @@ category.cms=Správa obsahu (CMS)
 category.collaboration=Spolupráca
 category.community=Komunita
 category.content=Obsah
-category.control_panel.apps=Aplikácie
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfigurácia
 category.control_panel.sites=Sídla
 category.control_panel.system=Systém
@@ -60,7 +60,10 @@ category.entertainment=Zábava
 category.finance=Financie
 category.gadgets=Gadgety
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Báza znalostí
