--- a/portal-impl/src/content/Language_sv.properties
+++ b/portal-impl/src/content/Language_sv.properties
@@ -49,7 +49,7 @@ category.cms=Innehållshantering
 category.collaboration=Samverkan
 category.community=Community
 category.content=Innehåll
-category.control_panel.apps=Applikationer
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfiguration
 category.control_panel.sites=Platser
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Underhållning
 category.finance=Ekonomi
 category.gadgets=Gadgetar
 category.global_menu.applications=Applikationer
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Innehåll
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Markerad
 category.kb=Kunskapsdatabas
