--- a/portal-impl/src/content/Language_uk.properties
+++ b/portal-impl/src/content/Language_uk.properties
@@ -49,7 +49,7 @@ category.cms=Система управління вмістом
 category.collaboration=Спільна робота
 category.community=Спільнота
 category.content=Вміст
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Налаштування
 category.control_panel.sites=Сайтa
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Розваги
 category.finance=Фінанси
 category.gadgets=Ґаджет
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=База знань
