--- a/portal-impl/src/content/Language_zh_CN.properties
+++ b/portal-impl/src/content/Language_zh_CN.properties
@@ -52,7 +52,7 @@ category.cms=内容管理
 category.collaboration=协作
 category.community=社区
 category.content=内容
-category.control_panel.apps=应用程序
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=配置
 category.control_panel.sites=站点
 category.control_panel.system=系统
@@ -63,7 +63,10 @@ category.entertainment=娱乐
 category.finance=理财
 category.gadgets=小工具
 category.global_menu.applications=应用程序
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=内容
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=谷歌
 category.highlighted=突出显示
 category.kb=知识库
