--- a/portal-impl/src/content/Language_cs.properties
+++ b/portal-impl/src/content/Language_cs.properties
@@ -49,7 +49,7 @@ category.cms=Správa obsahu (CMS)
 category.collaboration=Spolupráce
 category.community=Komunity
 category.content=Obsah
-category.control_panel.apps=Aplikace
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfigurace
 category.control_panel.sites=Weby
 category.control_panel.system=Systém
@@ -60,7 +60,10 @@ category.entertainment=Zábava
 category.finance=Finance
 category.gadgets=Gadgety
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Báze znalostí
