--- a/portal-impl/src/content/Language_en_GB.properties
+++ b/portal-impl/src/content/Language_en_GB.properties
@@ -49,7 +49,7 @@ category.cms=Content Management (Automatic Copy)
 category.collaboration=Collaboration (Automatic Copy)
 category.community=Community (Automatic Copy)
 category.content=Content (Automatic Copy)
-category.control_panel.apps=Apps (Automatic Copy)
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuration (Automatic Copy)
 category.control_panel.sites=Sites (Automatic Copy)
 category.control_panel.system=System (Automatic Copy)
@@ -60,7 +60,10 @@ category.entertainment=Entertainment (Automatic Copy)
 category.finance=Finance (Automatic Copy)
 category.gadgets=Gadgets (Automatic Copy)
 category.global_menu.applications=Applications (Automatic Copy)
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content (Automatic Copy)
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google (Automatic Copy)
 category.highlighted=Highlighted (Automatic Copy)
 category.kb=Knowledge Base (Automatic Copy)
