--- a/portal-impl/src/content/Language_fa.properties
+++ b/portal-impl/src/content/Language_fa.properties
@@ -49,7 +49,7 @@ category.cms=مدیرت محتوا
 category.collaboration=همکاری
 category.community=انجمن
 category.content=محتوا
-category.control_panel.apps=برنامه های کاربردی
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=تنظیم
 category.control_panel.sites=سایت‌ها
 category.control_panel.system=سیستم
@@ -60,7 +60,10 @@ category.entertainment=سرگرمی
 category.finance=مالی
 category.gadgets=ابزارها
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=گوگل
 category.highlighted=برجسته شده
 category.kb=پایگاه دانش
