--- a/portal-impl/src/content/Language_fi.properties
+++ b/portal-impl/src/content/Language_fi.properties
@@ -49,7 +49,7 @@ category.cms=Sisällönhallinta
 category.collaboration=Yhteistyö
 category.community=Yhteisö
 category.content=Sisältö
-category.control_panel.apps=Sovellukset
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Asetukset
 category.control_panel.sites=Sivustot
 category.control_panel.system=Järjestelmä
@@ -60,7 +60,10 @@ category.entertainment=Viihde
 category.finance=Talous
 category.gadgets=Widgetit
 category.global_menu.applications=Sovellukset
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Sisältö
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Korostettu
 category.kb=Tietämyskanta
