--- a/portal-impl/src/content/Language_fr_CA.properties
+++ b/portal-impl/src/content/Language_fr_CA.properties
@@ -49,7 +49,7 @@ category.cms=Gestion de contenus
 category.collaboration=Collaboration
 category.community=Communauté
 category.content=Contenu
-category.control_panel.apps=Applications
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Paramètres
 category.control_panel.sites=Sites
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Divertissement
 category.finance=Finances
 category.gadgets=Instruments
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Base de connaissance
