--- a/portal-impl/src/content/Language_gl.properties
+++ b/portal-impl/src/content/Language_gl.properties
@@ -49,7 +49,7 @@ category.cms=CMS
 category.collaboration=Colaboración
 category.community=Comunidade
 category.content=Contido
-category.control_panel.apps=Panel de control: Sitio web
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuración
 category.control_panel.sites=Sitios Web
 category.control_panel.system=Sistema
@@ -60,7 +60,10 @@ category.entertainment=Entretenimiento
 category.finance=Finanzas
 category.gadgets=Dispositivos
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Base de coñecemento
