--- a/portal-impl/src/content/Language_iw.properties
+++ b/portal-impl/src/content/Language_iw.properties
@@ -49,7 +49,7 @@ category.cms=ניהול תוכן
 category.collaboration=שיתוף פעולה
 category.community=קהילה
 category.content=תוכן
-category.control_panel.apps=יישומים
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=הגדרות
 category.control_panel.sites=אתרים
 category.control_panel.system=מערכת
@@ -60,7 +60,10 @@ category.entertainment=בידור
 category.finance=כלכלה
 category.gadgets=גאדג'טים
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=גוגל
 category.highlighted=מודגש
 category.kb=בסיס ידע
