--- a/portal-impl/src/content/Language_lt.properties
+++ b/portal-impl/src/content/Language_lt.properties
@@ -49,7 +49,7 @@ category.cms=Content Management
 category.collaboration=Collaboration
 category.community=Community
 category.content=Content
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuration
 category.control_panel.sites=Sites
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Entertainment
 category.finance=Finance
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Knowledge Base
