--- a/portal-impl/src/content/Language_nl_BE.properties
+++ b/portal-impl/src/content/Language_nl_BE.properties
@@ -55,7 +55,7 @@ category.cms=Web Content
 category.collaboration=Samenwerking
 category.community=Community
 category.content=Content
-category.control_panel.apps=Controlepaneel: Site
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Configuratie
 category.control_panel.sites=Communities
 category.control_panel.system=Systeem
@@ -66,7 +66,10 @@ category.entertainment=Entertainment
 category.finance=Financiën
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Knowledge
