--- a/portal-impl/src/content/Language_sl.properties
+++ b/portal-impl/src/content/Language_sl.properties
@@ -49,7 +49,7 @@ category.cms=Upravljanje z vsebinami
 category.collaboration=Sodelovanje
 category.community=Skupnost
 category.content=Vsebina
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Nastavitve
 category.control_panel.sites=Skupnosti
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Zabava
 category.finance=Finance
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Baza znanja
