--- a/portal-impl/src/content/Language_sr_RS.properties
+++ b/portal-impl/src/content/Language_sr_RS.properties
@@ -49,7 +49,7 @@ category.cms=Управљање Садржајем
 category.collaboration=Сарадња
 category.community=Заједница
 category.content=Садржај
-category.control_panel.apps=Апликације
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Конфигурација
 category.control_panel.sites=Сајтови
 category.control_panel.system=Систем
@@ -60,7 +60,10 @@ category.entertainment=Забава
 category.finance=Финансије
 category.gadgets=Геџети
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=База Знања
