--- a/portal-impl/src/content/Language_ta_IN.properties
+++ b/portal-impl/src/content/Language_ta_IN.properties
@@ -49,7 +49,7 @@ category.cms=உள்ளடக்க மேலாண்மை
 category.collaboration=இணைப்பு
 category.community=சமூகம்
 category.content=உள்ளடக்கம்
-category.control_panel.apps=பயன்பாடுகள்
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=கட்டமைப்பு
 category.control_panel.sites=தளங்கள்
 category.control_panel.system=அமைப்பு
@@ -60,7 +60,10 @@ category.entertainment=பொழுதுபோக்கு
 category.finance=நிதி
 category.gadgets=கேஜெட்கள்
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=கூகுள்
 category.highlighted=தனிச்சிறப்பான
 category.kb=அறிவு தளம்
