--- a/portal-impl/src/content/Language_tr.properties
+++ b/portal-impl/src/content/Language_tr.properties
@@ -49,7 +49,7 @@ category.cms=CMS
 category.collaboration=İletişim
 category.community=Topluluk
 category.content=İçerik
-category.control_panel.apps=Apps
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Konfigürasyon
 category.control_panel.sites=Yerler
 category.control_panel.system=System
@@ -60,7 +60,10 @@ category.entertainment=Eğlence
 category.finance=Finans
 category.gadgets=Alet
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Bilgi Tabanlı
