--- a/portal-impl/src/content/Language_vi.properties
+++ b/portal-impl/src/content/Language_vi.properties
@@ -49,7 +49,7 @@ category.cms=Quản trị nội dung
 category.collaboration=Sự cộng tác
 category.community=Cộng tác
 category.content=Nội dung
-category.control_panel.apps=Bảng điều khiển: Trang thông tin
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=Cấu hình
 category.control_panel.sites=Các trang thông tin (Sites)
 category.control_panel.system=Hệ thống
@@ -60,7 +60,10 @@ category.entertainment=Giải trí
 category.finance=Tài chính
 category.gadgets=Tiện ích
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=Nền tảng tri thức
