--- a/portal-impl/src/content/Language_zh_TW.properties
+++ b/portal-impl/src/content/Language_zh_TW.properties
@@ -50,7 +50,7 @@ category.cms=內容管理
 category.collaboration=合作
 category.community=社群
 category.content=內容
-category.control_panel.apps=應用程式
+category.control_panel.apps=Marketplace (Automatic Copy)
 category.control_panel.configuration=配置
 category.control_panel.sites=站台
 category.control_panel.system=系統
@@ -61,7 +61,10 @@ category.entertainment=娛樂
 category.finance=財務
 category.gadgets=Gadgets
 category.global_menu.applications=Applications
+category.global_menu.applications.commerce=Commerce (Automatic Copy)
+category.global_menu.applications.communication=Communication (Automatic Copy)
 category.global_menu.applications.content=Content
+category.global_menu.applications.custom.apps=Custom Apps (Automatic Copy)
 category.google=Google
 category.highlighted=Highlighted
 category.kb=知識庫
