--- a/modules/apps/translation/translation-test/src/testIntegration/resources/com/liferay/translation/exporter/test/dependencies/test-journal-article_122.xlf
+++ b/modules/apps/translation/translation-test/src/testIntegration/resources/com/liferay/translation/exporter/test/dependencies/test-journal-article_122.xlf
@@ -8,6 +8,12 @@
 				<target><![CDATA[Este es el titulo]]></target>
 			</segment>
 		</unit>
+		<unit id="description">
+			<segment>
+				<source><![CDATA[This is the summary]]></source>
+				<target><![CDATA[Este es el resumen]]></target>
+			</segment>
+		</unit>
 		<unit id="content">
 			<segment>
 				<source><![CDATA[<p>This is the content</p>
